welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: value unary_! is not a member of java.awt.Color
while(!Color.green)
      ^