welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {


    
    if(estFaceMur)
    {
    	return false
    }
    
while(!Color.green)
{
avance()
}










return true
}